update: Home bio + Contact icons"

--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -3,10 +3,10 @@
   "navbarItemWorks": "Works",
   "menuItemHome": "Home",
   "about_me": "About me",
-  "paragraph1": "I'm a freelancer based in France who has been constantly learning and practicing web development for more than 4 years. My goal is to become a full-stack engineer.",
-  "paragraph2": "Web development and web design have become new passions. I just like to design and create things with Figma or Framer and integrate them into websites mainly with Reactjs or Nextjs as frameworks using Typescript.",
-  "paragraph3": "Apart from that, I love playing video games to detach myself a bit from the routine and relax as well as go to the gym 💪🔱. I also love to listen to music. I listen to music everyday while playing videogames, in the gym, while coding or even while sleeping. Last, but not least, I love cats 🐱 !",
-  "quote": "'If you spend too much time thinking about a thing, you'll never get it done.' - Bruce Lee",
+  "paragraph1": "I'm Jules, a freelance web developer based in France, passionate about web development and web design for the past 5 years. I've been constantly learning and practicing, and I specialize in designing and creating full functioning websites using cutting-edge technologies and frameworks like React.js, Vite.js, or Next.js with Typescript.",
+  "paragraph2": "Apart from coding. I find solace in playing video games and diving into mangas/webtoons. My love for music accompanies me throughout the day, whether I'm at the gym, working, or even sleeping (although I don't recommend the latter).",
+  "paragraph3": "I'm currently looking for a full-time position as a Frontend Developer or as a Fullstack Developer. If you have a project in mind or want to discuss how we can collaborate, ",
+  "paragraph4": "<b>CRUCIAL INFO ABOUT ME:</b> <br />I love cats 🐱",
   "team_works": "Team works",
   "solo_works": "Solo works",
   "projects_1": "React & Next.js",
