--- a/src/locales/fr/translationFR.json
+++ b/src/locales/fr/translationFR.json
@@ -3,10 +3,10 @@
   "navbarItemWorks": "Travaux",
   "menuItemHome": "Accueil",
   "about_me": "À propos de moi",
-  "paragraph1": "Je suis un freelance basé en France qui apprend et pratique constamment le développement web depuis plus de quatre ans. Mon objectif est de devenir un ingénieur fullstack dans les prochaines années.",
-  "paragraph2": "Le développement et l'intégration web sont devenus de nouvelles passions. J'aime concevoir et créer des designs avec Figma ou Framer et les intégrer dans des sites web principalement en utilisant React.js ou Nextjs comme frameworks avec Typescript.",
-  "paragraph3": "À part cela, j'adore jouer aux jeux vidéo pour me détendre et décompresser ainsi que faire du sport 💪🔱. J'aime aussi écouter de la musique. J'écoute de la musique tous les jours en jouant, en faisant du sport, en codant et même en dormant. Enfin, et pas des moindre, j'adore les chats 🐱 !",
-  "quote": "'If you spend too much time thinking about a thing, you'll never get it done.' - Bruce Lee",
+  "paragraph1": "Je suis Jules, un développeur web indépendant basé en France, passionné par le développement web et le web design depuis plus de 5 ans. J'ai constamment appris et pratiqué, me spécialisant dans la conception et la création de sites web en utilisant les dernières technologies tels que React.js, Vite.js, ou Next.js avec TypeScript.",
+  "paragraph2": "À part cela, je trouve du réconfort en jouant à des jeux vidéo et en plongeant dans des mangas/webtoons. Mon amour pour la musique m'accompagne tout au long de la journée, que je sois à la salle de sport, au travail, ou même en dormant (bien que je ne recommande pas ce dernier choix).",
+  "paragraph3": "Je suis actuellement à la recherche d'un poste à plein temps en tant que développeur Frontend ou développeur Fullstack. Si vous avez un projet en tête ou souhaitez discuter de la manière dont nous pourrions collaborer, ",
+  "paragraph4": "<b>INFORMATIONS ESSENTIELLES SUR MOI :</b> <br />J'aime les chats 🐱",
   "team_works": "Projet en équipe",
   "solo_works": "Projets en solo",
   "client_projects": "Projets clients",
