feat: add few projects and minor ui/ux tweaks

--- a/src/locales/en/translationEN.json
+++ b/src/locales/en/translationEN.json
@@ -16,16 +16,21 @@
   "felix": "Integration and development of the international platform: Felix - using Next.js and TailwindCSS",
   "jobzura": "Second team project : A web3 native jobs marketplace Fiverr-like - Made with Next.js and Tailwindcss.",
   "cyc": "First client project : A crypto website made with Next.js and Tailwindcss.",
-  "skoonova": "Third client project : An E-sport coaching platform made with Next.js, Tailwindcss/Chakraui, Stripe and Firebase.",
   "aesfa": "Second client project : A website for an association made with Next.js, Tailwindcss and MongoDB.",
+  "skoonova": "Third client project : An E-sport coaching platform made with Next.js, Tailwindcss/Chakraui, Stripe and Firebase.",
+  "moonroll": "Fourth client project : A web3 betting platform with games like slots, roulette, and blackjack - Made with Next.js and Tailwindcss.",
   "twitterclone": "First project to learn how to recreate Twitter's homepage with Next.js and Firebase",
   "linkedinclone": "Second project to learn how to recreate Linkedin's homepage with Next.js and MongoDB.",
   "promptify": "Promptify is an open-source AI prompting tool for modern world to discover, create and share creative prompts.",
+  "unolingo": "A project to learn how to build a language learning app like Duolingo made with Next.js 14, Bun, Drizzle, Neon, Stripe, TailwindCSS.",
+  "fuzzie": "A project to learn how to build a SAAS automation builder made with Next.js 14, Bun, Clerk, Neon, Stripe, Tailwind, Shadcn.",
+  "prismic": "A project to learn how to build a landing page with beautiful animations made with Prismic CMS, Next.js 14, GSAP, TailwindCSS.",
+  "filedrive": "A project to learn how to build a file storage app with role base authorization made with Next.js 14, Convex, TailwindCSS, Shadcn.",
   "messengerclone": "A messenger clone built with the latest Next.js 13.4 version, Prisma, MongoDB and Pusher for live messages.",
   "ecommerceclone": "A project to learn how to recreate an ecommerce store which implements Stripe as a payment functionality.",
-  "todolist": "First React Native project to learn how to recreate a simple todo list",
-  "teslaclone": "Second React Native project to learn how to recreate a basic homepage of a Tesla app",
-  "nftapp": "Third React Native project to learn how to recreate a NFT app with a modern design",
+  "teslaclone": "First React Native project to learn how to recreate a basic homepage of a Tesla app",
+  "nftapp": "Second React Native project to learn how to recreate a NFT app with a modern design",
+  "aivideoshare": "Third React Native project to learn how to recreate a video sharing app with a modern design",
   "contact": "Get in touch",
   "placeholder1": "Your Name",
   "placeholder2": "Your Email",
