--- a/src/locales/fr/translationFR.json
+++ b/src/locales/fr/translationFR.json
@@ -16,17 +16,22 @@
   "kiabi": "Intégration et développement de l'interface pour la nouvelle tablette directement installée en magasin Kiabi - Réalisée avec React.js et Tailwindcss.",
   "felix": "Intégration et développement de la plateforme internationale : Réalisée avec React.js et Tailwindcss",
   "jobzura": "Second projet en équipe : un Fiverr web3 - Réalisé avec React.js et Tailwindcss.",
-  "cyc": "Premier vrai projet pour un client. Il s'agit d'un site de crypto-monnaie. Développé avec Next.js et Tailwindcss.",
-  "skoonova": "Troisième projet pour un client. Il s'agit d'une plateforme de coaching esport. Développée avec Next.js, Tailwindcss/Chakraui, Stripe et Firebase",
+  "cyc": "Premier projet pour un client. Il s'agit d'un site de crypto-monnaie. Développé avec Next.js et Tailwindcss.",
   "aesfa": "Second projet pour un client. Ici, il s'agit du site pour l'association : AESFA. Réalisé avec Next.js, Tailwindcss et MongoDB.",
+  "skoonova": "Troisième projet pour un client. Il s'agit d'une plateforme de coaching esport. Développée avec Next.js, Tailwindcss/Chakraui, Stripe et Firebase",
+  "moonroll": "Quatrième projet pour un client. Il s'agit d'une plateforme de paris web3 avec des jeux comme les machines à sous, la roulette et le blackjack. Réalisé avec Next.js et Tailwindcss.",
   "twitterclone": "Premier projet pour apprendre à refaire l'interface de la page d'accueil de Twitter avec Next.js.",
   "linkedinclone": "Second projet pour apprendre à refaire l'interface de la page d'accueil de Linkedin avec Next.js et MongoDB.",
   "promptify": "Promptify est une plateforme open-source de création, découverte et partage de prompt pour IA.",
+  "filedrive": "Un projet pour apprendre à construire une application de stockage de fichiers avec une autorisation basée sur les rôles réalisée avec Next.js 14, Convex, TailwindCSS, Shadcn.",
+  "unolingo": "Un projet pour apprendre à construire une application d'apprentissage des langues comme Duolingo réalisée avec Next.js 14, Bun, Drizzle, Neon, Stripe, TailwindCSS.",
+  "fuzzie": "Un projet pour apprendre à construire un constructeur d'automatisation SAAS réalisé avec Next.js 14, Bun, Clerk, Neon, Stripe, Tailwind, Shadcn.",
+  "prismic": "Un projet pour apprendre à construire une page de destination avec de belles animations réalisée avec Prismic CMS, Next.js 14, GSAP, TailwindCSS.",
   "messengerclone": "Un clone de Messenger réalisé avec la dernière version de Next.js (13.4) en date, Prisma, MongoDB et Pusher pour les messages instantanés.",
   "ecommerceclone": "Un projet pour apprendre à recréer un magasin ecommerce a l'aide de Stripe comme fonctionnalité de paiement.",
-  "todolist": "Premier projet avec React Native pour apprendre à faire une Todo app",
-  "teslaclone": "Second projet avec React Native pour à refaire une page d'accueil type d'une application Tesla",
-  "nftapp": "Troisième projet avec React Native pour apprendre à faire une application de NFT avec un design moderne",
+  "teslaclone": "Premier projet avec React Native pour à refaire une page d'accueil type d'une application Tesla",
+  "nftapp": "Second projet avec React Native pour apprendre à faire une application de NFT avec un design moderne",
+  "aivideoshare": "Troisième projet avec React Native pour apprendre à faire une application de partage de vidéos avec un design moderne",
   "contact": "Entrer en contact",
   "placeholder1": "Votre nom",
   "placeholder2": "Votre Email",
